[New Multicolumn] Fix overflow computation for column blocks. https://bugs.webkit.org/show_bug.cgi?id=110392.

Reviewed by Simon Fraser.

Source/WebCore:

* rendering/RenderBox.cpp:
(WebCore::RenderBox::addOverflowFromChild):
Exclude in-flow RenderFlowThreads from overflow propagation.

* rendering/RenderMultiColumnSet.h:
* rendering/RenderRegion.h:
(WebCore::RenderRegion::shouldHaveAutoLogicalHeight):
 * rendering/RenderRegionSet.h:
(RenderRegionSet):
Override shouldHaveAutoLogicalHeight to always be false
for region sets and for columns. Eventually we're going to try
to leverage this code to do column balancing, and that's why
RenderMultiColumnSet has a unique override.

LayoutTests:

* fast/multicol/newmulticol/column-rules-fixed-height-expected.html:
* fast/multicol/newmulticol/column-rules-fixed-height.html:



Canonical link: https://commits.webkit.org/128698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143546 268f45cc-cd09-0410-ab3c-d52691b4dbfc