Source/WebCore/rendering/RenderRegionSet.h
@@ -49,6 +49,9 @@ class RenderRegionSet : public RenderRegion {
 public:
     RenderRegionSet(Element*, RenderFlowThread*);
     
+protected:
+    virtual bool shouldHaveAutoLogicalHeight() const OVERRIDE { return false; }
+
 private:
     virtual void installFlowThread() OVERRIDE;
 
